RESOLVED FIXED311245
[WGSL] webgpu:shader,validation,decl,var:* is failing
https://bugs.webkit.org/show_bug.cgi?id=311245
Summary [WGSL] webgpu:shader,validation,decl,var:* is failing
Tadeu Zagallo
Reported 2026-03-31 23:57:22 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-31 23:57:31 PDT
Tadeu Zagallo
Comment 2 2026-04-01 00:03:26 PDT
EWS
Comment 3 2026-04-07 05:51:54 PDT
Committed 310702@main (f902b0ca6829): <https://commits.webkit.org/310702@main> Reviewed commits have been landed. Closing PR #61812 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.