[WGSL] webgpu:shader,validation,decl,var:* is failing https://bugs.webkit.org/show_bug.cgi?id=311245 rdar://173838628

Reviewed by Mike Wyrzykowski.

Correctly handle trailing commas in variable declarations and add missing checks
for which types of variables can accessed from a given pipeline stage.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/decl/var-expected.txt:
* Source/WebGPU/WGSL/IOValidator.cpp:
(WGSL::IOValidator::validateIO):
(WGSL::IOValidator::visit):
(WGSL::IOValidator::validateResources):
(WGSL::IOValidator::validateEntryPointIO):
(WGSL::validateIO):
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseVariableQualifier):
* Source/WebGPU/WGSL/WGSLEnums.h:

Canonical link: https://commits.webkit.org/310702@main